@@ -31,6 +31,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 5476) Invalid xhtml in German localization
 * (bug 5479) Id translation for preferences tabs caption
 * Added skinname and style path parameters to CBT version of MonoBook
+* Include subversion revision number in Special:Version if available
 
 
 == Compatibility ==
